--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>Student Details</h2>
+	<h1><caption>Student Details</caption</h1>
 	
 		<table style="background-color:yellow">
 		
